@@ -1,5 +1,0 @@
-Ned's script to check McCabe complexity.
-
-This module provides a plugin for flake8, the Python code checker.
-
-This package contains the last version supporting Python 2.
