@@ -1,10 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1 2022/01/31 11:53:48 wiz Exp $
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/entry_points.txt
-${PYSITELIB}/${EGG_INFODIR}/not-zip-safe
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/mccabe.py
-${PYSITELIB}/mccabe.pyc
-${PYSITELIB}/mccabe.pyo
