@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.1 2022/01/31 11:53:48 wiz Exp $
-
-BLAKE2s (mccabe-0.6.1.tar.gz) = 1d184b05f5b8b4024062c50404259d6c6ab94584a726f0ef7d1b03797b981455
-SHA512 (mccabe-0.6.1.tar.gz) = d8fc251a29790887c14c5932c5172b4cd578cd37ccf14cb96e80f0b97f27023427ea032d14e1e2a99d72627b055eb285f60db69e679ecd79d90a34b0255703d8
-Size (mccabe-0.6.1.tar.gz) = 8612 bytes
